add_subdirectory(./4.1.depth_testing)
add_subdirectory(./4.2.stencil_testing)
add_subdirectory(./4.3.blending)
add_subdirectory(./4.4.face_culling)
add_subdirectory(./4.5.framebuffer)
add_subdirectory(./4.6.cubemap)
add_subdirectory(./4.7.advanced_data)
add_subdirectory(./4.8.advanced_glsl)
add_subdirectory(./4.9.geometry_shader)
add_subdirectory(./4.10.instancing)