add_subdirectory(./5.1.advanced_lighting)
add_subdirectory(./5.2.gamma)
add_subdirectory(./5.3.1.shadow_mapping)
add_subdirectory(./5.3.2.point_shadow)
add_subdirectory(./5.4.normal_mapping)
add_subdirectory(./5.5.parallax_mapping)
add_subdirectory(./5.6.HDR)
add_subdirectory(./5.7.bloom)
add_subdirectory(./5.8.deferred_shading)
add_subdirectory(./5.9.SSAO)